removing "before" tags Prior99/cah-fullformat-german#6

--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -21,11 +21,10 @@
 %
 \titlecard{Drogen}%
 %
-\whitecard{Drogen}{8g bestes russisches Heroin.}%
-% before: 8kg Heroin 
+\whitecard{Drogen}{200g bestes russisches Heroin.}%
 % replacement for engl. "8 oz. of sweet Mexican black-tar heroin"
 \whitecard{Drogen}{Ritalin.}%
-% before: Amphetamin - replacement for engl. "Aderall" -> drug against ADHD, narcolepsy etc.
+% replacement for engl. "Aderall" -> drug against ADHD, narcolepsy etc.
 \whitecard{Drogen}{Kleber schnüffeln.}%
 % engl "Sniffing glue"
 \whitecard{Drogen}{Mal so richtig high werden.}%
@@ -39,5 +38,4 @@
 \blackcard{1}{Drogen}{Was ist meine Anti-Droge?}%
 % engl. "What's my anti-drug?"
 \blackcard{2}{Drogen}{Als ich auf einem LSD-Trip war, verwandelte sich \underl in \underl.}%
-% before: Acid
 % engl. "When I was tripping on acid, ___ turned into ___"
