--- a/categories/fsk16.tex
+++ b/categories/fsk16.tex
@@ -22,7 +22,6 @@
 \titlecard{FSK 16}%
 %
 \whitecard{FSK 16}{50.000 Volt direkt in die Nippel.}%
-% before: genau
 % engl. "50,000 volts straight to the nipples"
 \whitecard{FSK 16}{Daniel Radcliffes appetitliches Arschloch.}%
 % engl. "Daniel Radcliffe's delicious asshole"
@@ -34,7 +33,6 @@
 % engl. "Balls"
 \whitecard{FSK 16}{Eine Anmache.}%
 \whitecard{FSK 16}{Eine freche schwarze Frau.}%
-% before: erotische
 % engl. "A sassy black woman"
 \whitecard{FSK 16}{Ein gebleichtes Arschloch.}%
 % engl. "A bleached asshole"
@@ -51,24 +49,26 @@
 % original: feuchter Traum
 % engl. "Wet dreams"
 \whitecard{FSK 16}{Fliegende Sex-Pythons.}%
-% engl. "Flying sex snakes" -> Extra long lanky penises - before: Sex-Schlangen
+% engl. "Flying sex snakes" -> Extra long lanky penises
 \whitecard{FSK 16}{Heavy Petting.}%
-% engl. "Third Base" (https://en.wikipedia.org/wiki/Baseball_metaphors_for_sex) - original: Die Dritte Base
+% original: Die Dritte Base
+% engl. "Third Base" (https://en.wikipedia.org/wiki/Baseball_metaphors_for_sex)
 \whitecard{FSK 16}{Erotische Kissen- schlachten.}%
 % original: sexy
 % engl "Sexy pillow fights"
 \whitecard{FSK 16}{Genitalpircings.}%
 \whitecard{FSK 16}{Geschmackvolle Seitentitte.}%
-% original: sideboob, before: Dekolleté
+% original: sideboob, alternative replacment: Dekolleté
 % engl. "Tasteful sideboob"
 \whitecard{FSK 16}{Harald Schmidts Hoden im Vorhang verfangen.}%
 \whitecard{FSK 16}{Hodentorsion.}%
+% alternative: Testikuläre Verdrehung
 % engl. "Tersticular torsion"
+\whitecard{FSK 16}{Testikuläre Verdrehung.}%
 \whitecard{FSK 16}{Arschfreie Lederhosen.}%
-% before: Burschen ohne Ärsche
 % engl. "Assless chaps"
 \whitecard{FSK 16}{Vorher rausziehen.}%
-% original: Es rausholen - before: ``Ihn`` rausholen
+% original: Es rausholen - alternative: ``Ihn`` rausholen
 % engl. "Pulling out" -> as a contraceptive method
 \whitecard{FSK 16}{Begrapschen.}%
 % original: Mit einem Gefühl zurecht kommen
@@ -93,11 +93,9 @@
 \whitecard{FSK 16}{So sauer werden, dass man einen Ständer bekommt.}%
 % engl. "Getting so angry that you pop a boner"
 \whitecard{FSK 16}{Stephen Hawking, der versaut redet.}%
-% before: Sexgespräche
 % engl. "Stephen Hawking talking dirty"
 \whitecard{FSK 16}{Ein Mann am Rande des Orgasmus.}%
 % engl. "A man on the brink of orgasm"
-\whitecard{FSK 16}{Testikuläre Verdrehung.}%
 \whitecard{FSK 16}{Überraschungs- sex!}%
 % engl. "Surprise sex!"
 \whitecard{FSK 16}{Völlige Nacktheit.}%
@@ -106,7 +104,6 @@
 % original: Vorhaut
 % engl. "Foreskin"
 \whitecard{FSK 16}{Erotische Harry-Potter Geschichten.}%
-% before: Literatur
 % engl. "Harry Potter erotica"
 \whitecard{FSK 16}{Laktation.}%
 % engl. "Lactation"
@@ -114,7 +111,7 @@
 % engl. "Sexual tension"
 \whitecard{FSK 16}{Sich nackt ausziehen und KiKa gucken.}%
 % original: Nickelodeon
-% engl. "Getting naked and watching Nickelodeon"
+% replacement for engl. "Getting naked and watching Nickelodeon"
 \whitecard{FSK 16}{Einvernehm-\newline licher Sex.}%
 % engl. "Consensual sex"
 \whitecard{FSK 16}{Bilder von Brüsten.}%
@@ -123,11 +120,9 @@
 \whitecard{FSK 16}{Eine Erektion, die länger als vier Stunden dauert.}%
 % engl. "An erection that lasts longer than four hours"
 \whitecard{FSK 16}{Einen Ständer verstecken.}%
-% before: Erektion
 % enl. "Concealing a boner"
 \whitecard{FSK 16}{Rasiermesser-scharfe Nippel.}%
-% before: Eregierte Nippel
-% engl. "Nipple blades"
+% engl. "Nipple blades" -> eregierte Nippel
 \whitecard{FSK 16}{Freunde mit gewissen Vorzügen.}%
 % engl. "Friends with benefits"
 \whitecard{FSK 16}{Holzfäller-Phantasien.}%
