--- a/categories/fsk18.tex
+++ b/categories/fsk18.tex
@@ -23,13 +23,12 @@
 %
 \whitecard{FSK 18}{Anal-Sex.}%
 \whitecard{FSK 18}{Analperlen.}%
-% before: Analkette
 % engl. "Anals beads"
 \whitecard{FSK 18}{Blowjob während der Autofahrt.}%
 % engl. "Road head"
 \whitecard{FSK 18}{Deutsche  Sado-Maso- Pornos.}%
 \whitecard{FSK 18}{Mit einem Maschinengewehr in die Luft schießen, während man bis zu den Eiern in einer qiekenden Sau steckt.}%
-% before: Ein Gewehr in die Luft abfeuern mit den Eiern tief in einer quiekenden Sau. - original: Schwein
+% original: Schwein
 % engl. "Firing a rifle into the air while balls deep in a squealing hob"
 \whitecard{FSK 18}{Es von hinten besorgt bekommen.}%
 \whitecard{FSK 18}{Es von hinten machen.}%
@@ -41,7 +40,7 @@
 \whitecard{FSK 18}{Ihr den Arsch abwischen.}%
 % engl. "Wiping her butt"
 \whitecard{FSK 18}{In einen Pool voller Kindertränen wichsen.}%
-% engl. "jerking off into a pool of children's tears"
+% engl. "Jerking off into a pool of children's tears"
 \whitecard{FSK 18}{Inzest.}%
 % engl. "Incest"
 \whitecard{FSK 18}{Natursekt- spiele.}%
@@ -51,14 +50,13 @@
 \whitecard{FSK 18}{Pädophile.}%
 % engl. "Pedophiles"
 \whitecard{FSK 18}{Russische Kellerpornos.}%
-% engl. "German dungeon porn"
+% replacement for engl. "German dungeon porn"
 \whitecard{FSK 18}{Sex mit Patrick Steward.}%
 % engl. "Sex with Patrick Steward"
 \whitecard{FSK 18}{Ein Einweckglas in mein Anus einführen.}%
-% engl. "Inserting a mason jar into my anus"
+% engl. "Inserting a mason jar into my anus" -> see Glass Ass / 1 Man 1 Jar
 \whitecard{FSK 18}{Freiwillige Vergewaltigung.}%
 \whitecard{FSK 18}{Verpixelte Bukkakke-Pornos.}%
-% before: zensierte
 % engl. "Pixelated bukkake"
 \whitecard{FSK 18}{Drei Schwänze auf einmal.}%
 % engl. "Three dicks at the same time"
@@ -71,7 +69,6 @@
 \whitecard{FSK 18}{Tentakel Pornos.}%
 % engl. "Tentacle porn"
 \whitecard{FSK 18}{Ein trauriger Handjob.}%
-% before: schlechter
 % engl. "A sad handjob"
 \whitecard{FSK 18}{Pac-Man, unkontrollierbar am Sperma Schlucken.}%
 % engl. "Pac-Man uncontrollably guzzling cum"
