--- a/categories/geschichte.tex
+++ b/categories/geschichte.tex
@@ -25,11 +25,9 @@
 \whitecard{Geschichte}{Anders Breivik.}%
 \whitecard{Geschichte}{Der Amoklauf von Winnenden.}%
 \whitecard{Geschichte}{Historisch bedingte schwarze Schulen.}%
-% before: Historische schwarze Kollegen
 % engl. "Historically black colleges"
 \whitecard{Geschichte}{Der Pfad der Tränen}%
-% before: Eine Spur aus Tränen
-% engl. "The Trail of Tears" https://de.wikipedia.org/wiki/Pfad_der_Tr%C3%A4nen
+% engl. "The Trail of Tears" -> https://de.wikipedia.org/wiki/Pfad_der_Tr%C3%A4nen
 \whitecard{Geschichte}{Der Versailler Vertrag.}%
 \whitecard{Geschichte}{Genghis Khan.}%
 \whitecard{Geschichte}{Hurrikan Katrina.}%
@@ -40,13 +38,11 @@
 % engl. "Smallpox blankets" -> intentional smallpox spreading in Native Americans
 \whitecard{Geschichte}{Sklaverei.}%
 \whitecard{Geschichte}{Drei-Fünftel-Klausel.}%
-% before: Halbherziger Kompromiss
 % engl. "Three-Fifths compromise" -> Slaves count 3/5 of a white person https://de.wikipedia.org/wiki/Drei-F%C3%BCnftel-Klausel
 \whitecard{Geschichte}{Solidaritäts-zuschlag.}%
-% supplementary replacement for Drei-Fünftel-Klausel
-% engl. "Three-Fifths compromise"
+% supplementary replacement for engl. "Three-Fifths compromise" -> see "Drei-Fünftel-Klausel"
 \whitecard{Geschichte}{Unser erster Chimpansen-Kanzler.}%
-% engl. "Our first chimpanze president"
+% replacement for engl. "Our first chimpanze president"
 \whitecard{Geschichte}{Wikinger.}%
 % engl. "Vikings"
 \whitecard{Geschichte}{Ein Zeitreise-Paradoxon.}%
@@ -70,10 +66,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \blackcard{1}{Geschichte}{Das Museum für Naturkunde Berlin hat gerade eine interaktive Ausstellung eröffnet über \underl.}%
-% before: Das Naturkundemuseum stellt jetzt auch \underl aus. - original: Beim Versuch...das Smithsonian Museum of Natural History...
-% engl. "The Smithsonian Museum of Natural History has just opened an interactive exhibit on ___"
+% original: Beim Versuch...das Smithsonian Museum of Natural History...
+% replacement for engl. "The Smithsonian Museum of Natural History has just opened an interactive exhibit on ___"
 \blackcard{1}{Geschichte}{``Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.``}%
-% reference: Albert Einstein
 % engl. "I do not know with what weapons World War III will be fought, but World War IV will be fought with ___"
+% -> reference: Albert Einstein
 \blackcard{1}{Geschichte}{Wie werden wir in 1.000 Jahren unsere Güter und Dienste bezahlen, wenn Papiergeld nur eine entfernte Erinnerung ist?}%
 % engl. "In 1,000 years, when paper money is a distant memory, how will we pay for goods and services?"
