--- a/categories/politik.tex
+++ b/categories/politik.tex
@@ -27,8 +27,7 @@
 \whitecard{Politik}{Angela Merkel.}%
 \whitecard{Politik}{Barack Obama.}%
 \whitecard{Politik}{CDU-Wähler.}%
-% replacement for Republikaner
-% engl. "Republicans"
+% replacement for engl. "Republicans"
 \whitecard{Politik}{Die priviligierte Oberklasse.}%
 \whitecard{Politik}{Die Terroristen.}%
 % engl. "The terrorists"
@@ -72,20 +71,19 @@
 \whitecard{Politik}{Beweise vernichten.}%
 % engl. "Destroying the evidence"
 %
-% Replacement for "Sarah Palin"? -> politician, commentator, author, ninth Governor of Alaska 
-% Replacement for "Dick Cheney"? -> former USA Vice President
-% Replacement for "Joe Biden"? -> former USA Vice President
+% Help needed: Replacement for "Sarah Palin"? -> politician, commentator, author, ninth Governor of Alaska 
+% Help needed: Replacement for "Dick Cheney"? -> former USA Vice President
+% Help needed: Replacement for "Joe Biden"? -> former USA Vice President
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \blackcard{1}{Politik}{Und gleich in der Oliver Geissen Show: \newline ``Hilfe, mein Sohn ist \underl!''}%
-% before: Heute-Journal
-% engl. "Today on Maury: ``Help! My son is___``"
+% replacement for engl. "Today on Maury: ``Help! My son is___``"
 \blackcard{1}{Politik}{Es ist eine Schande, dass Kinder heutzutage alle mit \underl in Berührung kommen.}%
 % engl. "It's a pity that kids these days are all getting involved with ___"
 \blackcard{1}{Politik}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, steckte die französische Regierung Millionen in die Erforschung von \underl.}%
 % original: Während die USA und Sovietunion um den Mond kämpften, steckte die mexikanische Rgierung Millionen von Pesos in die Erfroschung von ...
-% engl. "While the United States raced the Soviet Union to the moon, the Mexican government funneled millions of pesos into research on ___"
+% replacement for engl. "While the United States raced the Soviet Union to the moon, the Mexican government funneled millions of pesos into research on ___"
 \blackcard{2}{Politik}{Gerüchten zufolge ist \underl  gefüllt mit \underl  Vladimir Putins Lieblingsessen.}%
 \blackcard{1}{Politik}{Was bevorzugt Donald Trump?}%
 % original: Dick Cheney -> former USA Vice President
