--- a/categories/religion.tex
+++ b/categories/religion.tex
@@ -24,11 +24,10 @@
 \whitecard{Religion}{72 Jungfrauen.}%
 % engl. "72 virgins"
 \whitecard{Religion}{Alle Wiener Sängerknaben.}%
-% before: Der gesamte Chor eines Mormonen-Gotteshauses - replacement of engl. "The entire Mormon Tabernacle Choir" -> name
+% replacement of engl. "The entire Mormon Tabernacle Choir" -> name
 \whitecard{Religion}{Den Antichrist gebären.}%
 % engl. "Giving birth to the Antichrist"
 \whitecard{Religion}{Das Blut Christi.}%
-% before: von Jesus Christus
 % engl. "The Blood of Chist"
 \whitecard{Religion}{Das Rote Meer teilen.}%
 \whitecard{Religion}{Der Papst.}%
@@ -36,14 +35,13 @@
 \whitecard{Religion}{Der Pfarrer Dr. Martin Luther King, Jr.}%
 % engl. "The Rev. Dr. Martin Luther King, Jr."
 \whitecard{Religion}{Der Tag des Jüngsten Gerichts.}%
-% before: Das Jüngste Gericht
 \whitecard{Religion}{Der Tanz der Zahnfee.}%
 \whitecard{Religion}{Der Teufel höchst selbst.}%
 % engl. "The Devil himself"
 \whitecard{Religion}{Die Entrückung.}%
 % engl. "The rapture" -> rise into heavenly spheres
 \whitecard{Religion}{Die Heilige Schrift.}%
-% before: Bibel
+% alternative: Bibel
 % engl. "The Holy Bible"
 \whitecard{Religion}{Die Amisch.}%
 % engl. "The Amish"
