--- a/categories/basis.tex
+++ b/categories/basis.tex
@@ -26,7 +26,6 @@
 \whitecard{Basis}{Alkoholismus.}%
 % engl. "Alcoholism"
 \whitecard{Basis}{Alten Leuten zuzwinkern.}%
-% before: zuwinken
 % engl. "Winking at old people"
 \whitecard{Basis}{Am Ohrfeigenbaum schütteln.}%
 % replacement for engl. "A can of whoop-ass"
@@ -44,7 +43,6 @@
 \whitecard{Basis}{Balzverhalten.}%
 % engl. "A mating display"
 \whitecard{Basis}{Bei den Paralympischen Spielen schummeln.}%
-% before: Spcial Olympics
 % engl. "Cheating in the Special Olympics""
 \whitecard{Basis}{Bei der Erwähnung von Hutus und Tutsis unkontrollierbar kichern müssen.}%
 % engl. "Helplessly giggling at the mention of Hutus and Tutsis"
@@ -55,11 +53,9 @@
 % engl. "Elderly Japanese men"
 \whitecard{Basis}{Bienen?}%
 % engl. "Bees?"
-\whitecard{Basis}{Sich bis zur Ehe aufsparen.}%
-% before: Bis nach der Hochzeit warten
+\whitecard{Basis}{Sich für die Ehe aufsparen.}%
 % engl. "Waiting 'til marriage"
 \whitecard{Basis}{In Flammen stehen.}%
-% before: brennen
 % engl. "Being on Fire"
 \whitecard{Basis}{Charisma.}%
 \whitecard{Basis}{Dieses Ding, das deine Muskeln mit Elektroschocks aufbaut.}%
@@ -75,7 +71,6 @@
 \whitecard{Basis}{Das Herz eines Kindes.}%
 % engl. "The heart of a child"
 \whitecard{Basis}{Das Piratenleben.}%
-% before: Das Leben eines Piraten
 % engl. "A pirate's life"
 \whitecard{Basis}{Das letzte noch bekannte Bison essen.}%
 % engl. "Eating the last known Bison"
@@ -90,7 +85,7 @@
 % engl. "The violation of our most basic human rights"
 \whitecard{Basis}{Das Wunder der Geburt.}%
 % engl. "The miracle of birth"
-\whitecard{Basis}{Ein merkwürdiger Bruder.}%
+\whitecard{Basis}{Dein merkwürdiger Bruder.}%
 % engl. "Your weird brother"
 \whitecard{Basis}{Dem Sonnen- untergang entgegenreiten.}%
 % engl. "Riding off into the sunset"
@@ -118,6 +113,7 @@
 % original: Vorzeigeminderheit
 % engl. "The token minority"
 \whitecard{Basis}{Die Pflichten als Ehefrau.}%
+% alternative: eheliche Pflichten
 % engl. "Wifely duties"
 \whitecard{Basis}{Die Plazenta.}%
 % engl. "The placenta"
@@ -126,6 +122,10 @@
 \whitecard{Basis}{Die Wunder des Orients.}%
 % engl. "The wonders of the Orient"
 \whitecard{Basis}{Dosenfressende Ziegen.}%
+% -> myth about goats eating nearly everything they can get a hold of -> see "Bill Grogan's Goat"
+% -> maybe also a Gravity Falls reference: 
+% Mabel: "He's really good. He figured out who was eating our tin cans!" 
+% Dipper: "All signs pointed to the goat."
 \whitecard{Basis}{Dreistigkeit.}%
 \whitecard{Basis}{Donnernde Fürze.}%
 \whitecard{Basis}{Echte zwischenmenschliche Beziehung.}%
@@ -139,7 +139,6 @@
 \whitecard{Basis}{Ein chinesisches Gymnastikteam.}%
 % engl. "A Chineese gymnastics team"
 \whitecard{Basis}{Ein deftiger Frühstücks-Döner.}%
-% before: scharfer Frühstücks-Burrito 
 % replacement for engl. "A zesty breakfast burrito"
 \whitecard{Basis}{Eine Backpfeife.}%
 % engl. "A bitch slap"
@@ -160,7 +159,6 @@
 \whitecard{Basis}{Einem Roboter beibringen, zu Lieben.}%
 % engl. "Teaching a robot to love"
 \whitecard{Basis}{Eine asymmetrischer Kunst-Busen.}%
-% before: Eine asymmetrische Brust-vergößerung
 % engl. "An asymmetric boob job"
 \whitecard{Basis}{Eine enttäuschende Geburtstags- party.}%
 % engl. "A disappointing birthday party"
@@ -170,12 +168,10 @@
 \whitecard{Basis}{Eine homoerotische Volleyball- Montage.}%
 % engl. "A homoerotic volleyball montage"
 \whitecard{Basis}{Ein Men's Health Abo.}%
-% before: Eine Mitgliedschaft in einem Fitness-Center 
 % replacement for engl. "A subscription to Men's Fitness"
 \whitecard{Basis}{Eine U-Bahn.}%
 % engl. "An Underground Railroad"
 \whitecard{Basis}{Einen Kronleuchter auf deine Feinde fallen lassen und sich am Seil hochziehen lassen.}%
-% before: hochklettern
 % engl. "Dropping a chandelier on your enemies and riding the rope up" 
 % -> reference to movie stunts where someone cuts a chendelier rope and grips the lose end to get a ride up.
 \whitecard{Basis}{Einen Nierenstein ausscheiden.}%
@@ -191,8 +187,8 @@
 \whitecard{Basis}{Ein Gehirntumor.}%
 % engl. "A brain tumor"
 \whitecard{Basis}{Ein guter Riecher.}%
-% before: ein guter Schnupfer
-% engl. "A good sniff" - alternative: Herumschnüffeln
+% alternative: Herumschnüffeln
+% engl. "A good sniff"
 \whitecard{Basis}{Ein Hammer in der Dose.}%
 \whitecard{Basis}{Ein tierisches Durcheinander.}%
 \whitecard{Basis}{Ein kleines Pferd.}%
@@ -200,7 +196,7 @@
 \whitecard{Basis}{Ein Leben voller Traurigkeit.}%
 % engl. "A lifetime of sadness"
 \whitecard{Basis}{Ein übles Mundwerk.}%
-% original: loses - before: schmutziges
+% original: loses - alternative: schmutziges
 % engl. "A foul mouth"
 \whitecard{Basis}{Einmal richtig dran schnuppern.}%
 \whitecard{Basis}{Ein Mann mittleren Alters auf Rollschuhen.}%
@@ -212,10 +208,8 @@
 \whitecard{Basis}{Ein gottverdammter Zauberer sein.}%
 % engl "Being a motherfucking sorcerer"
 \whitecard{Basis}{Ein Minischwein mit kleinem Regenmantel und Gummiestiefelchen.}%
-% before: Mikroschwein
 % engl. "A micropig wearing a tiny raincoat and booties"
 \whitecard{Basis}{Ein Pantomime mit Schlaganfall.}%
-% before: Herzinfarkt
 % engl. "A mime having a stroke"
 \whitecard{Basis}{Ein Ratschlag von einem weisen alten schwarzen Mann.}%
 % engl "Advice from a wise, old black man"
@@ -225,7 +219,6 @@
 % original: Beutel Zauberbohnen
 % engl. "A bag of magic beans"
 \whitecard{Basis}{Ein Meer voller Sorgen.}%
-% before: See voller Probleme 
 % literal translation for engl. "A sea of troubles" -> Donna Leon: Das Gesetz der Lagune
 \whitecard{Basis}{Ein Todesstrahl.}%
 \whitecard{Basis}{Ein Stamm von Kriegerinnen.}%
@@ -267,7 +260,6 @@
 \whitecard{Basis}{Friendly Fire.}%
 % engl. "Friendly fire"
 \whitecard{Basis}{Frische funky Reime.}%
-% before: Funky-Frische Rhythmen
 % engl. "Funky fresh rhymes"
 \whitecard{Basis}{Gänse.}%
 % engl. "Geese"
@@ -298,7 +290,7 @@
 \whitecard{Basis}{Grabschändung.}%
 % engl. "Grave robbing"
 \whitecard{Basis}{Oma.}%
-% before: Großmutter
+% alternative: Großmutter
 % engl. "Grandma"
 \whitecard{Basis}{Großes Aufheben um Nichts.}%
 \whitecard{Basis}{Gutes Benehmen.}%
@@ -306,16 +298,15 @@
 % engl. "Cock fights"
 \whitecard{Basis}{Halb nackt auf einem McDonalds- Parkplatz aufwachen.}%
 % original: Denny`s
-% engl. "Waking up half-naked in a Denny's parking lot"
+% replacement for engl. "Waking up half-naked in a Denny's parking lot"
 \whitecard{Basis}{Hefe.}%
 % engl. "Yeast"
 \whitecard{Basis}{Heiraten, ein paar Kinder haben, ein bisschen Kram kaufen, sich dann auf Mallorca zur Ruhe setzen und sterben.}%
-% engl. "Getting married, having a few kids, buying some stuff, retiring to Florida, and dying"
+% replacement for engl. "Getting married, having a few kids, buying some stuff, retiring to Florida, and dying"
 \whitecard{Basis}{Heiße Leute.}%
-% before: Menschen
 % engl. "Hot people"
 \whitecard{Basis}{Warmer Käse.}%
-% before: heißer
+% alternative: heißer
 % engl. "Hot cheese"
 \whitecard{Basis}{Herausprügeln.}%
 % engl. "Whipping it out"
@@ -339,7 +330,6 @@
 \whitecard{Basis}{Homosexualität.}%
 % 
 \whitecard{Basis}{Die Gay Agenda.}%
-% before: homosexueller Lebensstil 
 % engl. "The homosexual agenda" https://de.wikipedia.org/wiki/Gay_agenda
 \whitecard{Basis}{Hormons-pritzen.}%
 % engl. "Hormone injections"
@@ -351,16 +341,14 @@
 \whitecard{Basis}{Brennen.}%
 \whitecard{Basis}{In Problemen ertrinken.}%
 \whitecard{Basis}{In einem Flash-Mob singen und tanzen.}%
-% before: Anfangen zu OR Ins Singen und Tanzen verfallen
 % engl. "Breaking out into song and dance" -> kind of a Flah-Mob
 \whitecard{Basis}{Intelligentes Design.}%
 \whitecard{Basis}{Internat.}%
 \whitecard{Basis}{Asiaten, die nicht gut in Mathe sind.}%
-% official: Japaner
+% original: Japaner
 % engl. "Asians who aren't good at math"
 \whitecard{Basis}{Jede Ecke putzen.}%
 \whitecard{Basis}{Kamikaze-Piloten.}%
-% before: Kamikaze-Kissen
 % engl. "Kamikaze pilots"
 \whitecard{Basis}{Käse-Cracker.}%
 % replacement for engl. "Lunchables"
@@ -368,11 +356,12 @@
 % engl. "Not wearing pants"
 \whitecard{Basis}{Kerle, die nicht anrufen.}%
 \whitecard{Basis}{Kettensägen als Hände.}%
-% before: für die Hände
 % engl. "Chainsaws for hands"
 \whitecard{Basis}{Tetanus.}%
-% before: Kiefersperre
-% engl. "Lockjaw" - alternatives: Kieferklemme, Wundstarrkrampf...
+% alternatives: Kiefersperre, Wundstarrkrampf...
+% engl. "Lockjaw"
+\whitecard{Basis}{Kiefersperre.}%
+% alternative to engl. "Lockjaw"
 \whitecard{Basis}{Kinder an Leinen.}%
 % engl. "Children on leashes"
 \whitecard{Basis}{Kinder-Schönheits- wettbewerbe.}%
@@ -384,7 +373,6 @@
 \whitecard{Basis}{Kräftige Oberschenkel.}%
 % engl. "Powerful thighs"
 \whitecard{Basis}{Hospizarbeit.}%
-% before: Krankenpfleger
 % engl. "Hospizarbeit"
 \whitecard{Basis}{Kundenservice- Mitarbeiter.}%
 \whitecard{Basis}{Krankhaft Fettleibige}%
@@ -420,17 +408,16 @@
 \whitecard{Basis}{Meine Genitalien.}%
 % engl. "My gentials"
 \whitecard{Basis}{Meine Hüfte.}%
-% engl. "My humps" - alternative: Höcker
+% alternative: Höcker
+% engl. "My humps"
 \whitecard{Basis}{Meine Warzen.}%
 \whitecard{Basis}{Mein schwarzer Arsch.}%
-% before: Hintern
 % engl. "My black ass"
 \whitecard{Basis}{Menstruation.}%
 \whitecard{Basis}{PMS-Wutanfälle.}%
-% before: menstruell bedingte Wutanfälle
+% alternative: menstruell bedingte Wutanfälle
 % engl. "Menstrual rage"
 \whitecard{Basis}{Natürliches Potenzmittel}%
-% before: männliche Verbesserungen
 % engl. "Natural male enhancement"
 \whitecard{Basis}{Natürliche Selektion.}%
 % engl. "Natural selection"
@@ -438,12 +425,12 @@
 \whitecard{Basis}{Obdachlose.}%
 % engl. "Homeless people"
 \whitecard{Basis}{Objekt-permanenz.}%
-% -> from: psych. child development
 % engl. "Object permanence"
+% -> from: psych. child development
 \whitecard{Basis}{Öffentliches Verspotten.}%
 % engl. "Public ridicule"
 \whitecard{Basis}{Opponierbare Daumen.}%
-% original: gegenüberstellbar -> (biolog: opponierbar)
+% original: gegenüberstellbar -> biolog: opponierbar
 % engl. "Opposable thumbs"
 \whitecard{Basis}{Östrogen.}%
 % engl. "Estrogen"
@@ -477,7 +464,6 @@
 \whitecard{Basis}{Schlampen.}%
 % engl. "Bitches"
 \whitecard{Basis}{Schlechte Lebens-entscheidungen.}%
-% before: lebensverändernde
 % engl. "Poor life choices"
 \whitecard{Basis}{Schreckliche Laser-Haarent-fernungs-unfälle.}%
 % engl. "Horrifying laser hair removal accidents"
@@ -510,7 +496,6 @@
 \whitecard{Basis}{Sterben.}%
 % engl. "Dying"
 \whitecard{Basis}{Stille.}%
-% before: Ein Moment der Stille
 % engl. "Silence"
 \whitecard{Basis}{Skalpierung.}%
 \whitecard{Basis}{Sonderschulen.}%
@@ -542,9 +527,10 @@
 \whitecard{Basis}{Unangemes- senes Jodeln.}%
 % engl. "Inappropriate yodeling"
 \whitecard{Basis}{Unermessliche Dummheit.}%
-% before: unendliche menschliche Dummheit - original: unergründliche Dummheit alternative: Unfassbare Blödheit
+% original: unergründliche Dummheit - alternative: Unfassbare Blödheit
 % engl. "Unfathomable stupidity"
 \whitecard{Basis}{Die menschliche Torheit.}%
+% alternative: Unendliche menschliche Dummheit
 % engl. "The folly of man"
 \whitecard{Basis}{Verdrängung.}%
 % engl. "Repression" alternative: Unterdrückung
@@ -574,10 +560,8 @@
 \whitecard{Basis}{Zu viel Haargel.}%
 \whitecard{Basis}{Zuhälter.}%
 \whitecard{Basis}{Zurückgeben.}%
-% before: Zurückschenken
 % engl. "Take-backsies" -> children slang for giving something back that was given to you
 \whitecard{Basis}{Rassisitisch voreingenommene Fragen in der Aufnahmeprüfung.}%
-% before: Einstellungstests
 % engl. "Racially-biased SAT questions"
 \whitecard{Basis}{Ein rechtschaffender Cop, der nichts zu verlieren hat}%
 \whitecard{Basis}{Sexting}%
@@ -591,7 +575,6 @@
 % engl. "Crippling debt"
 \whitecard{Basis}{Das Reiner-Calmund-Qualitäts-Siegel.}%
 \whitecard{Basis}{So tun, als ob's interessieren würde}%
-% before: Vorgeben zu verhüten.
 % engl. "pretending to care"
 \whitecard{Basis}{Spritzen teilen.}%
 \whitecard{Basis}{Ein M16 Sturmgewehr.}%
@@ -602,7 +585,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \blackcard{1}{Basis}{Die Alternative Medizin nutzt nun die heilsamen Kräfte von \underl.}%
-% before: heilende Energie -engl. "Alternative medicine is now embracing the curative powers of ___"
+% engl. "Alternative medicine is now embracing the curative powers of ___"
 \blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
 % original: Klassenfahrt
 % engl. "The class field trip was completely ruined by ___"
@@ -615,11 +598,10 @@
 \blackcard{1}{Basis}{Ich trinke, um \underl \newline zu vergessen.}%
 % engl. "I drink to forget ___"
 \blackcard{1}{Basis}{Man sagt, in der JVA Tegel könne man für 200 Zigaretten \underl bekommen.}%
-% before: Knast
 % engl. "In L.A. County Jail, word is you can trade 200 cigarettes for ___"
 \blackcard{1}{Basis}{Nach dem Erdbeben brachte Bill Gates \underl zu den Haitianern.}%
 % original: Sean Penn
-% engl. "After the earthquake, Sean Penn brought ___ to the people of Haiti"
+% replacement for engl. "After the earthquake, Sean Penn brought ___ to the people of Haiti"
 \blackcard{1}{Basis}{Papa, warum weint Mama?}%
 % engl. "Daddy, why is mommy crying?"
 \blackcard{1}{Basis}{\underl. High Five, Alter.}%
@@ -633,7 +615,6 @@
 % engl. "Why can't I sleep at night?"
 \blackcard{1}{Basis}{Warum tut mir alles weh?}%
 % engl. "Why do I hurt all over?"
-\blackcard{1}{Basis}{Was habe ich aus Dänemark mitgebracht?}%
 \blackcard{1}{Basis}{Was denkt Angela Merkel gerade?}%
 % replacement for engl. "What's George W. Bush thinking about right now?"
 \blackcard{1}{Basis}{Was gibt es im Himmel zuhauf?}%
@@ -641,10 +622,11 @@
 \blackcard{1}{Basis}{Was hat meine letzte Beziehung beendet?}%
 % engl. "What ended my last relationship?"
 \blackcard{1}{Basis}{Was hat nie versagt, eine Party aufzupeppen?}%
-% before: nie verfehlt... zu beleben - original: Was funktioniert immer, um eine Party aufzupeppen?
+% original: Was funktioniert immer, um eine Party aufzupeppen?
 % engl. "What never fails to liven up the party?"
 \blackcard{1}{Basis}{Was hilft Angela Merkel beim Entspannen?}%
-% original: Obama - replacement for engl. "What helps Obama unwind?"
+% original: Obama
+% replacement for engl. "What helps Obama unwind?"
 \blackcard{1}{Basis}{Was ist denn das für ein Geräusch?}%
 % engl. "What's that sound?"
 \blackcard{1}{Basis}{Was ist denn das für ein Geruch?}%
@@ -652,14 +634,12 @@
 \blackcard{1}{Basis}{Was ist der beste Freund eines Mädchens?}%
 % engl. "What's a girls best friend?"
 \blackcard{1}{Basis}{Was ist die neue Trend-Diät?}%
-% before: Modediät
 % engl. "What's the new fad diet?"
 \blackcard{1}{Basis}{Was ist meine geheime Superkraft?}%
 % engl. "What's my secret power?"
 \blackcard{1}{Basis}{Was verstecken meine Eltern vor mir?}%
 % engl. "What are my parents hiding from me?"
 \blackcard{1}{Basis}{Was werde ich aus der Zukunft zurückbringen, um alle davon zu überzeugen, dass ich ein mächtiger Magier bin?}%
-% before: großartiger
 % engl. "What will I bring back in time to convince people that I am a powerfull wizard?"
 \blackcard{1}{Basis}{Was willst du nicht in deinem Hühnchen Süß-Sauer finden?}%
 % original: chinesischen
@@ -667,13 +647,13 @@
 \blackcard{1}{Basis}{Was wird mit dem Alter besser?}%
 % engl. "What gets better with age?"
 \blackcard{1}{Basis}{Was würde Oma verstören, aber dennoch irgendwie verzücken?}%
-% before: ekelhaft... seltsam bezaubernd -  engl. "What would grandma find disturbing, yet oddly charming?"
+% engl. "What would grandma find disturbing, yet oddly charming?"
 \blackcard{1}{Basis}{Wenn ich Milliadär bin, werde ich zum Gedenken an \underl  eine 15m hohe Statue errichten.}%
 % original: Millionär OR Milliardär ... 50-Fuß große Statue in Gedenken an... errichten lassen
 % engl. "When I am a billionaire, I shall erect a 50-foot statue to commemorate ___"
 \blackcard{1}{Basis}{Wenn ich König von Deutschland bin, werde ich das Ministerium für \underl ins Leben rufen.}%
 % original: Präsident der USA
-% engl. "When I am President of the United States, I will create the Department of ___"
+% replacement for engl. "When I am President of the United States, I will create the Department of ___"
 \blackcard{1}{Basis}{Ich pflege meinen Beziehungsstatus mit \underl.}%
 % original: Wie halte ich meine Beziehung am Laufen? -  engl. "How am I maintaining my relationship status?"
 \blackcard{1}{Basis}{Wir stellen vor: Xtreme Fußball! \newline Es ist wie normales Fußball, nur mit \underl.}%
@@ -682,24 +662,23 @@
 \blackcard{1}{Basis}{TSA-Richtlinien verbieten im Flugzeug ab sofort: \underl.}%
 % engl. "TSA guidelines now prohibit ___ on airplanes"
 \blackcard{1}{Basis}{Was benutzt man in der Nachhilfe, um Schülern in Hauptschulen zum Erfolg zu verhelfen?}%
-% before: Wie motivieren die Lehrer an Hauptschulen ihre Schüler, zu lernen? - original: in Großstädten OR in Problembezirken
-% engl. "What's Teach for America using to inspire inner city students to succeed?"
+% original: in Großstädten OR in Problembezirken
+% replacement for engl. "What's Teach for America using to inspire inner city students to succeed?"
 \blackcard{1}{Basis}{\underl. Es ist eine Falle!}%
 % engl. "___. It's a trap!" -> probably reference from Star Wars 
 \blackcard{1}{Basis}{Was ist am meisten emo?}%
 % engl. "What's the most emo?"
-\blackcard{1}{Basis}{Was habe ich aus Mexiko mitgebracht?}%
-% engl. "What did I bring back from Mexico"
+\blackcard{1}{Basis}{Was habe ich aus Tschechien mitgebracht?}%
+% replacement for engl. "What did I bring back from Mexico"
 \blackcard{1}{Basis}{\underl? Gibt's ne App für.}%.
 \blackcard{1}{Basis}{\underl. Einmal gepoppt, nie mehr gestoppt?}%
 \blackcard{1}{Basis}{Was ist am krustigsten?}%
 \blackcard{1}{Basis}{In seinen letzten Momenten dachte Michael Jackson an \underl.}%
 \blackcard{1}{Basis}{\underl ist was Frauen wollen.}%
 \blackcard{1}{Basis}{Liebes Dr. Sommer Team,\newline Ich habe Probleme mit \underl und würde Euch gerne um Rat bitten.}%
-% original: Dr. Sommer ... Dich... OR: Margret
+% original: Dr. Sommer ... Dich... AND: Margret
 % engl. "Dear Abby, I'm having some trouble with ___ and would like your advice"
 \blackcard{1}{Basis}{\underl. So möchte ich sterben.}%
-% alternative: will
 % engl. "___. That's how I want to die"
 \blackcard{1}{Basis}{Wissenschaftler haben kürzlich einen primitiven Stamm entdeckt, der \underl verehrt.}%
 \blackcard{1}{Basis}{Wie riechen alte Leute?}%
@@ -711,12 +690,11 @@
 \blackcard{2}{Basis}{Ja richtig, ich habe \underl getötet. \newline Du fragst, wie? \underl .}%
 % engl. "That's right, I killed ___. How, you ask? ___"
 \blackcard{2}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.\newline}%
-% engl. "Step 1: ___. Step 2: ___. Step 3: Profit"
+% engl. "Step 1: ___. Step 2: ___. Step 3: Profit" -> reference to South Park gnomes meme
 \blackcard{2}{Basis}{\underl ist eine heikle Angelegenheit, die zu \underl führt.}%
 % original: schmaler Grat
 % engl. "___ is a slippery slope that leads to ___"
 \blackcard{2}{Basis}{Und der Oscar für \underl geht an \underl.}%
-% before: Preis
 % engl. "And the Academy Award for ___ goes to___"
 \blackcard{2}{Basis}{Bei meinem nächsten Zaubertrick werde ich \underl  aus \underl  herausholen.}%
 % engl. "For my next trick, I will pull ___ out of ___"
