--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -26,18 +26,16 @@
 \whitecard{Böse}{AIDS.}%
 % engl. "AIDS"
 \whitecard{Böse}{Alice Schwarzer füttern.}%
-% replacement for engl. "Feeding Rosie O'Donnell" 
-% -> American comedian, actress, magazine editor, lesbian rights activist
+% replacement for engl. "Feeding Rosie O'Donnell" -> American comedian, actress, magazine editor, lesbian rights activist
 \whitecard{Böse}{Alle Kekse vor einem AIDS-Spendenlauf essen.}%
 \whitecard{Böse}{Auschwitz.}%
 % engl. "Auschwitz"
 \whitecard{Böse}{Auto- kannibalismus.}%
 % engl. "Autocannibalism"
 \whitecard{Böse}{Die diesjährige Massenschießerei.}%
-% before: Die jährliche Massenhinrichtung
 % engl. "This year's mass shooting"
 \whitecard{Böse}{Die Homos wegbeten.}%
-% original: Die Schwulen wegwünschen - before: Für das Verschwinden von Schwulen beten
+% original: Die Schwulen wegwünschen - alternative: Für das Verschwinden von Schwulen beten
 % engl. "Praying the gay away"
 \whitecard{Böse}{Ein Fötus.}%
 % engl. "A fetus"
@@ -46,10 +44,8 @@
 \whitecard{Böse}{Eine Pyramide aus abgetrennten Köpfen.}%
 % engl. "A pyramid of severed heads"
 \whitecard{Böse}{Eine Kühlbox voller Organe.}%
-% before: Kühlschrank
 % engl. "A cooler full of organs""
 \whitecard{Böse}{Ein rüstiger Mongoloid.}%
-% before: starker
 % engl. "A robust mongoloid"
 \whitecard{Böse}{Erträgliche Transvestiten.}%
 % original: passable
@@ -64,16 +60,15 @@
 \whitecard{Böse}{Kreuzigung.}%
 % engl. "Crucifixion"
 \whitecard{Böse}{Lustmuskete.}%
-% before: Männerfleisch 
 % engl. "Man meat" -> penis slang
 \whitecard{Böse}{Menschen-fleisch.}%
 \whitecard{Böse}{Amputierte.}%
-% before: Menschen mit Amputationen
+% alternative: Menschen mit Amputationen
 % engl. "Amputees"
 \whitecard{Böse}{Eugenetik.}%
-% engl. "Eugenetics" - before: Rassenhygiene -> but is an outdated term of Eugenetik
+% alternative: Rassenhygiene -> but is an outdated term of Eugenetik
+% engl. "Eugenetics"
 \whitecard{Böse}{MechaHitler.}%
-% before: Robo-Hitler
 % engl. "MechaHitler" -> end boss of Wolfenstein 3D
 \whitecard{Böse}{Schlecht getimte Holocaust-Witze.}%
 % engl. "Poorly-timed Holocaust jokes"
@@ -88,7 +83,7 @@
 \whitecard{Böse}{Weiße mit Afros.}%
 \whitecard{Böse}{Zwergenwerfen.}%
 \whitecard{Böse}{Totschlag mittels Fahrzeug.}%
-% before: vehikulärer Massenmord -> vehikulär is not a German word - original: Körperverletzung mit einem Fahrzeug
+% original: Körperverletzung mit einem Fahrzeug
 % engl. "Vehicular manslaughter" 
 \whitecard{Böse}{Fahrlässige Tötung.}%
 % alternative and translational pun to engl. "Vehicular manslaughther"
@@ -101,19 +96,16 @@
 \whitecard{Böse}{Skalps von weißen Männern.}%
 % engl. "White-man skalps"
 \whitecard{Böse}{Weiße Privilegiertheit.}%
-% before: Privilegien der Weißen
 % engl. "White privilege"
 \whitecard{Böse}{Zivile Opfer.}%
-% before: Verlust von Zivilisten
 % engl. "Civilian casualties"
 \whitecard{Böse}{Lepra.}%
 % engl. "Leprosy"
 \whitecard{Böse}{Harakiri.}%
-% engl. "Seppuku"
+% replacement for engl. "Seppuku"
 \whitecard{Böse}{Ethnische Säuberung.}%
 % engl. "Ethnic cleansing"
 \whitecard{Böse}{Feld-amputationen.}%
-% before: Kriegsbedingte
 % engl. "Battlefield amputations"
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
