--- a/categories/kultur.tex
+++ b/categories/kultur.tex
@@ -24,11 +24,9 @@
 \whitecard{Kultur}{American Gladiators.}%
 \whitecard{Kultur}{Arnold Schwarzenegger.}%
 \whitecard{Kultur}{Bill Nye, ``The Science Guy``.}%
-% before: dieser Wissenschafts-Heini
 % engl. "Bill Nye the Science Guy" -> slogan
 \whitecard{Kultur}{Bob der Baumeister.}%
-% replacement for Die kleine Dampflokomotive
-% engl. "The Little Engine That Could"
+% replacement for engl. "The Little Engine That Could" -> "Die kleine Dampflokomotive"
 \whitecard{Kultur}{Britney Spears mit 65.}%
 \whitecard{Kultur}{Cards Against Humanity.}%
 % engl. "Cards Against Humanity"
@@ -45,7 +43,7 @@
 % engl. "A live studio audience"
 \whitecard{Kultur}{Ein Amateurvideo von Heidi Klum, wie sie in eine Dose Slim-Fast heult.}%
 % alternative: Heimvideo von Vera am Mittag beim Heulen in eine Friteuse
-% engl "Home video of Oprah sobbing into a Lean Cuisine" 
+% replacement for engl "Home video of Oprah sobbing into a Lean Cuisine" 
 \whitecard{Kultur}{Günther Jauch, der von einem Schwarm Greifvögel attackiert wird.}%
 \whitecard{Kultur}{Hella von Sinnens Vagina.}%
 % replacement for engl. "Toni Morrison's Vagina"? -> awarded novelist, teacher
@@ -55,14 +53,14 @@
 \whitecard{Kultur}{Keanu Reeves.}%
 \whitecard{Kultur}{Lady Gaga.}%
 \whitecard{Kultur}{Mathleten.}%
-% iCarly reference for a Math-Club
+% engl. "Mathletes" -> iCarly reference for a Math-Club
 \whitecard{Kultur}{Michael Jackson.}%
 % replacement for "Sean Penn" -> actor, filmmaker
 \whitecard{Kultur}{Michael ``Bully`` Herbig.}%
 \whitecard{Kultur}{Miley Cyrus mit 55.}%
 % engl "Miley Cyrus at 55"
 \whitecard{Kultur}{Mord im Orient-Express.}%
-% replacement for engl. "A murder most foul" -> Agatha Christy: Vier Frauen und ein Mord
+% replacement for engl. "A murder most foul" -> Agatha Christy: "Vier Frauen und ein Mord"
 \whitecard{Kultur}{Natalie Portman.}%
 \whitecard{Kultur}{Nickelback.}%
 \whitecard{Kultur}{Nicolas Cage.}%
@@ -82,26 +80,24 @@
 \whitecard{Kultur}{``The Hustle``.}%
 % engl. "The Hustle" -> several references to this name in media and locations
 \whitecard{Kultur}{Thomas die Lokomotive.}%
-% replacement for Die kleine Dampflokomotive
-% engl. "The Little Engine That Could"
+% supplemental replacement for engl. "The Little Engine That Could" -> "Die kleine Dampflokomotive"
 \whitecard{Kultur}{Vera Int-Veen}%
 \whitecard{Kultur}{William Shatner.}%
 \whitecard{Kultur}{Winnie Puh.}%
 \whitecard{Kultur}{``YOU MUST CONSTRUCT ADDITIONAL PYLONS!''}%
-% Starcraft Meme -> translation?
-% engl "YOU MUST CONSTRUCT ADDITIONAL PYLONS!"
+% engl "YOU MUST CONSTRUCT ADDITIONAL PYLONS!" -> Starcraft Meme -> translation?
 \whitecard{Kultur}{Til Schweiger.}%
 \whitecard{Kultur}{Morgan Freemans Stimme.}%
 % engl. "Morgan Freeman's voice"
 \whitecard{Kultur}{Tom Cruise.}%
 \whitecard{Kultur}{Richterin Barbara Salesch.}%
-% engl. "Judge Judy"
+% replacement for engl. "Judge Judy"
 \whitecard{Kultur}{BATMAN!!!}%
 \whitecard{Kultur}{Das Blechflötensolo aus ``My Heart Will Go On``.}%
 % engl. "The penny whistle solo from ``My Heart Will Go On``"
 \whitecard{Kultur}{Bastian Pastewkas Schauspiel- karriere.}%
 % original: Shaquile O'Neal
-% engl. "Shaquille O'Neal's acting career"
+% replacement for engl. "Shaquille O'Neal's acting career"
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -116,28 +112,26 @@
 \blackcard{1}{Kultur}{Demnächst erscheint von J.K Rowling: \newline Harry Potter und die Kammer des \underl.}%
 % engl. "Next from J.K. Rowling: Harry Potter and the Chamber of ___"
 \blackcard{1}{Kultur}{Und nun auf Eurosport: Das Meisterschafts-turnier im \underl.}%
-% engl. "Next on ESPN2, the World Series of ___"
+% replacement for engl. "Next on ESPN2, the World Series of ___"
 \blackcard{1}{Kultur}{MTVs neue Reality-TV-Show: Jetzt mit 8 abgewrackten Promis, die mit \underl zusammenleben.}%
-% before: Stars - original: MTVs ... 8 verlebte Promis
+% original: 8 verlebte Promis
 % engl. "MTV's new reality show features eight washed-up celebrities living with ___"
 \blackcard{1}{Kultur}{Was hat Vin Diesel zu Abend gegessen?}%
-% before: zu Mittag
 % engl. "What did Vin Diesel eat for dinner?"
 \blackcard{1}{Kultur}{Was ist Batmans geheimes Laster?}%
-% before: Vorliebe
 % engl. "What is Batman's guilty pleasure?"
-\blackcard{2}{Kultur}{LifeTime\SymbReg \newline präsentiert: \newline ``\underl, \newline die Geschichte von \underl.``}%
-% before: Dreamworks
-% engl. "Lifetime presents ``___, the Story of ___``"
+\blackcard{2}{Kultur}{Time-Life\SymbReg \newline präsentiert: \newline ``\underl, \newline die Geschichte von \underl.``}%
+% replacement engl. "Lifetime presents ``___, the Story of ___``"
 \blackcard{2}{Kultur}{In ``M. Night`` Shyamalans neuem Film entdeckt Bruce Willis, dass \underl in Wirklichkeit die ganze Zeit \underl war.}%
 % original: in Wahrheit
 % engl. "In M. Night Shyamalan's new movie, Bruce Willis discovers that ___ had really been ___ all along"
 \blackcard{1}{Kultur}{99 \underl auf ihrem Weg zum Horizont.}%
 \blackcard{1}{Kultur}{Bob Ross ist hier, um \underl.}%
 \blackcard{1}{Kultur}{``Auf diese Art geht die Welt zugrund: \newline Auf diese Art geht die Welt zugrund: \newline Nicht mit einem Knall: \newline mit \underl.``}%
-% reference to T.S. Eliot - Die hohlen Männer - original: so wird die Welt enden... nicht mit einem Knall sondern mit...
+% original: so wird die Welt enden... nicht mit einem Knall sondern mit...
 % engl "Whis is the way the world ends \ This is the way the world ends \ Not with a bang but with ___"
+% -> reference to T.S. Eliot - "The Hollow Men" ("Die hohlen Männer")
 \blackcard{1}{Kultur}{``War, huh \newline What is it good for?''}%
-% reference to song Edwin Starr: War - before: Wofür ist Krieg gut?
 % engl. "War! What is it good for?"
+% -> reference to song Edwin Starr: War
 \blackcard{1}{Politik}{Während Picassos oftmals übersehener ``Braunen Periode`` schuf er hunderte Gemälde von \underl.}%
