typo: abgeworden -> abgeworfen

--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -112,7 +112,7 @@
 %
 \blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als der Weiße Mann ihnen \underl zeigte.}%
 % engl. "Life for American Indians was forever changed when the White Man introduced them to ___"
-\blackcard{1}{Böse}{Was haben die USA den Kindern in Afghanistan aus dem Flugzeug abgeworden?}%
+\blackcard{1}{Böse}{Was haben die USA den Kindern in Afghanistan aus dem Flugzeug abgeworfen?}%
 % original: im Luftraum von
 % engl. "What did the U.A. airdrop to the children of Afghanistan?"
 \blackcard{1}{Böse}{Menschen, die aussehen wie \underl.}%
