fixing Genghis Kahn -> Dschingis Khan

--- a/categories/geschichte.tex
+++ b/categories/geschichte.tex
@@ -29,7 +29,7 @@
 \whitecard{Geschichte}{Der Pfad der Tränen}%
 % engl. "The Trail of Tears" -> https://de.wikipedia.org/wiki/Pfad_der_Tr%C3%A4nen
 \whitecard{Geschichte}{Der Versailler Vertrag.}%
-\whitecard{Geschichte}{Genghis Khan.}%
+\whitecard{Geschichte}{Dschingis Khan.}%
 \whitecard{Geschichte}{Hurrikan Katrina.}%
 % engl. "Hurricane Katrina"
 \whitecard{Geschichte}{Kim Jong-il.}%
