typo: eine -> ein ... Kunstbusen

--- a/categories/basis.tex
+++ b/categories/basis.tex
@@ -158,7 +158,7 @@
 \whitecard{Basis}{Einem Kind Süßigigkeiten wegnehmen.}%
 \whitecard{Basis}{Einem Roboter beibringen, zu Lieben.}%
 % engl. "Teaching a robot to love"
-\whitecard{Basis}{Eine asymmetrischer Kunst-Busen.}%
+\whitecard{Basis}{Ein asymmetrischer Kunst-Busen.}%
 % engl. "An asymmetric boob job"
 \whitecard{Basis}{Eine enttäuschende Geburtstags- party.}%
 % engl. "A disappointing birthday party"
