fix dangling full stop at Eurosport ... Meisterschaftsturnier

--- a/categories/kultur.tex
+++ b/categories/kultur.tex
@@ -111,7 +111,7 @@
 % engl. "Introducing the amazing superhero/ sidekick duo! It's ___ and ___!"
 \blackcard{1}{Kultur}{Demnächst erscheint von J.K Rowling: \newline Harry Potter und die Kammer des \underl.}%
 % engl. "Next from J.K. Rowling: Harry Potter and the Chamber of ___"
-\blackcard{1}{Kultur}{Und nun auf Eurosport:\newline Das Meisterschafts-turnier im \underl.}%
+\blackcard{1}{Kultur}{Und nun auf Eurosport:\newline Das Meister-schaftsturnier im \underl.}%
 % replacement for engl. "Next on ESPN2, the World Series of ___"
 \blackcard{1}{Kultur}{MTVs neue Reality-TV-Show: Jetzt mit 8 abgewrackten Promis, die mit \underl zusammenleben.}%
 % original: 8 verlebte Promis
